--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application x:Class="ExViewer.App"
-             RequestedTheme="Light" 
+             RequestedTheme="Dark" 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ExViewer.Views">
