--- a/ExViewer/Views/MainPage.xaml
+++ b/ExViewer/Views/MainPage.xaml
@@ -6,7 +6,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              Loaded="Page_Loaded">
-    <SplitView x:Name="sv_root">
+    <SplitView x:Name="sv_root"
+               Grid.Row="1">
         <SplitView.Pane>
             <StackPanel>
                 <Button Style="{StaticResource NavigationBackButtonNormalStyle}"
