--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -1,5 +1,4 @@
 ﻿<Application x:Class="ExViewer.App"
-             RequestedTheme="Dark" 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ExViewer.Views">
@@ -19,5 +18,7 @@
             </local:ObjectToBooleanConverter.InnerConverter>
         </local:ObjectToBooleanConverter>
         <local:LengthConverter x:Key="LengthConverter" />
+        <local:EmptyConverter x:Key="EmptyConverter" />
+        <local:DefaultConverter x:Key="DefaultConverter" />
     </Application.Resources>
 </Application>
