--- a/ExViewer/Views/RootContorl.xaml
+++ b/ExViewer/Views/RootContorl.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="ExViewer.Views.MainPage"
+﻿<UserControl x:Class="ExViewer.Views.RootControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ExViewer"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             Loaded="Page_Loaded">
+             Loaded="Control_Loaded">
     <SplitView x:Name="sv_root"
                Grid.Row="1">
         <SplitView.Pane>
@@ -15,6 +15,11 @@
                         Height="48"
                         Width="48"
                         Click="btn_pane_Click" />
+                <Button Style="{StaticResource NavigationBackButtonNormalStyle}"
+                        Content="&#xE700;"
+                        Height="48"
+                        Width="48"
+                        Click="Button_Click" />
             </StackPanel>
         </SplitView.Pane>
         <Frame x:Name="fm_inner"
